apps/portainer/resources/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: portainer
  labels:
    app.kubernetes.io/name: portainer
    app.kubernetes.io/instance: portainer
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: "Portainer"
    gethomepage.dev/group: "Infrastructure"
    gethomepage.dev/icon: "portainer"
    gethomepage.dev/href: "https://portainer.cyphers.app"
    gethomepage.dev/description: "Container Management"
spec:
  type: NodePort
  ports:
    - port: 9000
      targetPort: 9000
      nodePort: 30777
      protocol: TCP
      name: http
    - port: 9443
      targetPort: 9443
      nodePort: 30779
      protocol: TCP
      name: https
    - port: 30776
      targetPort: 30776
      nodePort: 30776
      protocol: TCP
      name: edge
  selector:
    app.kubernetes.io/name: portainer
    app.kubernetes.io/instance: portainer
